<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:padding="5dp">


    <Button
        android:id="@+id/btn_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/btn_woman"
        android:text="@string/around1"
        android:textColor="@color/colorWhite"
        android:theme="@style/RaisedButton"
        tools:ignore="HardcodedText" />


    <Button
        android:id="@+id/btn_woman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/around2"
        android:textColor="@color/colorWhite"
        android:theme="@style/RaisedButton"
        tools:ignore="HardcodedText" />


    <Button
        android:id="@+id/btn_man"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/md_keylines"
        android:layout_toRightOf="@+id/btn_woman"
        android:text="@string/around3"
        android:textColor="@color/colorWhite"
        android:theme="@style/RaisedButton"
        tools:ignore="HardcodedText" />

</RelativeLayout>
