<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="Information">
        <menu>
        <item
            android:icon="@drawable/ic_home_black_24dp"
            android:tint="@color/button_grey"
            android:title="현재위치"
            android:id="@+id/item_one"/>
        <item
            android:icon="@drawable/ic_credit_card_black"
            android:tint="@color/button_grey"
            android:title="캐쉬"
            android:id="@+id/item_two"/>
        <item
            android:icon="@drawable/ic_control_point_duplicate_black_24dp"
            android:tint="@color/button_grey"
            android:title="포인트"
            android:id="@+id/item_three"/>
        </menu>
    </item>

    <item android:title="Communicate">
        <menu>
            <item
                android:icon="@drawable/ic_menu_black"
                android:tint="@color/button_grey"
                android:title="@string/sidemenu1"
                android:id="@+id/nav_share"/>
            <item
                android:icon="@drawable/ic_language_black"
                android:tint="@color/button_grey"
                android:title="@string/sidemenu2"
                android:id="@+id/nav_faq"/>
            <item
                android:id="@+id/nav_private"
                android:tint="@color/button_grey"
                android:icon="@drawable/ic_person_outline_black"
                android:title="@string/sidemenu3" />
            <item
                android:id="@+id/nav_mail"
                android:tint="@color/button_grey"
                android:icon="@drawable/ic_email_black"
                android:title="@string/sidemenu4" />
        </menu>
    </item>

</menu>