<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <ImageView
            android:id="@+id/set_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="25dp"
            android:onClick="onClick"
            android:src="@drawable/icon_man" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/set_UploadPicture"
            android:layout_width="72dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:onClick="onClick"
            android:textSize="8dp"
            android:text="@string/login1"/>
                   
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorBg"
            android:text="@string/sex"/>

        <Spinner
            android:id="@+id/set_spinner_sex"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="16dip"
            android:entries="@array/sex"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBg"
            android:text="@string/age"/>

        <Spinner
            android:id="@+id/set_spinner_age"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="16dip"
            android:entries="@array/age"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nickname"
                android:id="@+id/set_nickname"
                />
            <!--    android:inputType="textCapWords" -->

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/greetings"
                android:id="@+id/set_greetings"

                />
        </android.support.design.widget.TextInputLayout>

        <!--
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="Password"
                />

        </android.support.design.widget.TextInputLayout>
        -->
        <android.support.v7.widget.AppCompatButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="Create Account"
            android:id="@+id/set_btn_signup"
            android:textColor="@color/colorWhite"
            android:theme="@style/RaisedButton"
            />


        <TextView
            android:id="@+id/set_link_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/login6"
            android:textSize="16dip"
            android:gravity="center"/>

    </LinearLayout>


</ScrollView>
