<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="56dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/board6"
            android:textColor="@color/colorBg" />
        <TextView
            android:id="@+id/max_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0 / 200"
            android:textColor="@color/colorBg" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/board_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="201"
                android:hint="@string/board7"
                android:inputType="textMultiLine" />

        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/board_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="60dp"
                android:onClick="onClick"
                android:src="@drawable/icon_man" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/board_btn_UploadPicture"
                android:layout_width="72dp"
                android:layout_height="30dp"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="60dp"
                android:onClick="onClick"
                android:text="@string/login1"
                android:textSize="8dp"
                android:textColor="@color/colorWhite"
                android:theme="@style/RaisedButton"/>
                       
        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/board_btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:text="@string/board8"
            android:textColor="@color/colorWhite"
            android:theme="@style/RaisedButton" />

    </LinearLayout>


</ScrollView>
